Implemented Code for better coverage and removed the warning by adding argLine